# ChangeLog for sys-auth/consolekit
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-auth/consolekit/ChangeLog,v 1.145 2012/11/22 20:51:52 blueness Exp $

  22 Nov 2012; Anthony G. Basile <blueness@gentoo.org> ChangeLog:
  Fix failed gpg signing of manifest

  22 Nov 2012; Anthony G. Basile <blueness@gentoo.org>
  consolekit-0.4.5_p20120320-r1.ebuild:
  stable arm, bug #436666

  22 Nov 2012; Anthony G. Basile <blueness@gentoo.org>
  consolekit-0.4.5_p20120320-r1.ebuild:
  stable ppc64, bug #436666

  22 Nov 2012; Agostino Sarubbo <ago@gentoo.org>
  consolekit-0.4.5_p20120320-r1.ebuild:
  Stable for x86, tested by Vincent Olivert Riera <peratu@carrosses.com>, wrt
  bug #436666

  21 Nov 2012; Anthony G. Basile <blueness@gentoo.org>
  consolekit-0.4.5_p20120320-r1.ebuild:
  stable ppc, bug #436666, thanks peratu

  22 Oct 2012; Samuli Suominen <ssuominen@gentoo.org>
  consolekit-0.4.5_p20120320.ebuild, consolekit-0.4.5_p20120320-r1.ebuild:
  Revert last commit. We really don't want anyone using =sys-fs/udev-171* to
  enable USE="extras" since it's obsolete for a long time now.

  22 Oct 2012; William Hubbs <williamh@gentoo.org>
  consolekit-0.4.5_p20120320-r1.ebuild, consolekit-0.4.5_p20120320.ebuild:
  Emergency fix: I was told that the revision number 99 in the udev blockers
  makes it impossible to install consolekit with stable udev when using the
  desktop profiles.  I have dropped the udev revision number in the blocker to
  8, which is the last valid stable udev revision instead of 99.

  21 Oct 2012; Samuli Suominen <ssuominen@gentoo.org>
  consolekit-0.4.5_p20120320.ebuild, consolekit-0.4.5_p20120320-r1.ebuild:
  Update sys-fs/udev dependency because stable udev was revision bumped.

  15 Oct 2012; Jeroen Roovers <jer@gentoo.org>
  consolekit-0.4.5_p20120320.ebuild, consolekit-0.4.5_p20120320-r1.ebuild:
  Drop HPPA keywording (bug #438368).

  07 Oct 2012; Agostino Sarubbo <ago@gentoo.org>