@@ -9,24 +9,18 @@ AUX consolekit-shutdown-reboot-without-policies.patch 924 SHA256 cd9a2aa582644ad
 AUX consolekit-udev-acl-install_to_usr.patch 750 SHA256 823316f6898eaab0744e42fa11b1631f64187aebca35baa5aeab09279820bedd SHA512 d2d6fcedea5e72f5a1b387f411ac62a59fd3c9e90a318bd85c35d210b89b18f01511f6b05352c1a4a9508622f0b9242c1b9c15d5ae4f8adf2819b6c3a0ff5ac9 WHIRLPOOL a9b8f48c5dddabfa28c2a65ac99c10dd7cba41d8bdcdc1fac4a0932391a81d9ed87f34115d7a43611d2cd126d10a5378edb8e734c888d529eca4b0d20dd15ac1
 AUX pam-foreground-compat.ck 389 SHA256 0b5b22641e2b138f4e9dfff9790df9fedaf2f760cc3d878ee1e94c2fd52edea9 SHA512 3cabd23ff7dc5de0a86284c3a3d3ff923228969cc954a1036290d4f7f6d58646ea6ea1445f472476b6f319df4dcd22f71e5e0f5cc8c845cd7e0b148af689ce5a WHIRLPOOL a8e36292dc094e107492e65efd147b35e217c652c8bcc52c768942b15660ff7d251e55ee038ce326905f5dc8f17857b62725768d60c3d5c93927550c8ff47db2
 DIST ConsoleKit-0.4.5_p20120320.tar.xz 103424 SHA256 f85abe0644f4e9314bd33411aebceef662e482c02ab70635426996f743e2bbe3 SHA512 17ca572b49f175c3bb4e296927e8b2d5bb5c9af04c26175cc40b84ce8273aec2ff744df64089003ac79bf7a415b69a4fd7753a0bc65ff33bc99d6c79890e9fe3 WHIRLPOOL b8d66d91de932a0d9a6ca16d39bd1d301823531d55f0a9a98672408752458c5c55044eeed1ade37c58dfd67db61bcd30ab6919fd4fee878f949928feda8075ba
-EBUILD consolekit-0.4.5_p20120320-r1.ebuild 3051 SHA256 8b8cb0279a1e987266bbbc95c7d9b2d16becaaf6ee72a171bef8c013d8626146 SHA512 7aacc375008289a064e13120f909e1608d9c1ae93177041654d46e87b6ec9a9725266a1bfc8410548887a9d7ae230fc217b835d74c97d1f74d7327a9c3bc8d15 WHIRLPOOL ba94ac773774be1cfd454e6a95d23695fc7803979ed5a15f19493713e503473b31de2249696c3a719a9519e9b785630c10c017bd647d076a62546c73f6dab496
-EBUILD consolekit-0.4.5_p20120320.ebuild 3047 SHA256 a4d894b6479889b69b305a03bd8da32ffcbbc649bb7d63681cc5aae4c384bb31 SHA512 b6266801fb137118857a190edd1e92377804c224e99a9be2b55d0e6132ba0a796480358592483368834431a8a20ae68dd3185f8d8527f2a4a29b64b635b43779 WHIRLPOOL 93489d948273215b98b83500225c68f7fc3fc8571289545a718672cb39196c5c4e3e6cbc6dfa2d2d93bab0fe7fa77ea48ff81d039b6eb1faec978bdf878280e1
-MISC ChangeLog 22230 SHA256 25778ad1fc7aac86399fb78a45aaef75b6d7952f09e240580f8c8cd379d9a925 SHA512 fbe0194cd884e1c741e8310d5a016ad533f2dc298b57bd95f83bcb5e3bc96b1cc789d405067498cde16a49701cd15feaf4b3d4f7f76a743d2b16ea28cd788616 WHIRLPOOL b1e1eee8df3390b64133a361a6db329748af7f276dd991aaab9da825fac9c004ac8ef503513d44d3dda0e40c83d85927b8287b11a4a0061c4555394cf7e28f86
+EBUILD consolekit-0.4.5_p20120320-r1.ebuild 3044 SHA256 79b2aa50f3dc1b8b3ac5366319e7f6af7ef1ae66d879cf8e165f05b26e21dff2 SHA512 9b05a53dba94644ead20f8ca671aeb3013f9a53750139fd481e60c9c9016ed93d22266cdf2e88c107b79070eb53724b5fad3a287b485176be286844d1ccaf434 WHIRLPOOL f4e78f196c6b8a45fcee294174990df150698e56dc9abbfd131495617e427f44ad8bf7e290cafea4df41710c152d7bf5d7140a09576df441aa26f78c396dd164
+EBUILD consolekit-0.4.5_p20120320.ebuild 3039 SHA256 97b9dc171228708dfb15d6c35e60dfca3f14689bd8b12482b622cdd67a1720dc SHA512 66f7b8e040190c0a0d896e414cabef1d3d1183b871a207789b5a8c5e4d8e448eb1ba8796814439cf08e16a56d2cd27ad07c7ec7e780359bea9588c4b70b2955b WHIRLPOOL 6341d1c900f89e6b33e9004b582baf6892892a13bb9daabb5319c37b3d72f98635ccf07588e651c203bd4c3d964981fbf39caf75080ce3764a3bb81ff5115518
+MISC ChangeLog 22415 SHA256 448bffbb7e324586d800b612d531cdba7fe13cccf5fd90ff99ddbecd1d1dd9cb SHA512 7c27b12c1f36679c346c0d681972b346846bbb1a80bf40b6b78440cf17fdd653a1a9e3f1f01e204fb6f49cfb7601b86b2506e29af06615b4c380bb19cc20a0ee WHIRLPOOL 6fa7a898e0b0563907c8791ac9e5602a1c125dda3d1316060458b1953fb90d21568b2f77d54565eb8d8050c71246faee53f9d3296d0360cd14f18473725eeeba
 MISC metadata.xml 313 SHA256 a59fecba81d8bb5f8cc5d32815107f8087d3c1274c72dc42061bc0a720b0504b SHA512 d948611c395f0d4144d937d0e2e9ddf6ec0eea5f2f70553ea58a40c7132bf3b6839a741508711ffecf480fef0b1905f703273184e6e51b27afe22e7f5c831346 WHIRLPOOL 5448720853d00b6b6b1edf6323d6b1240891be64667423c69068961e302eb7c816b3367b2c58d0fa37fc1289e0970d55bbc07be4e21116edc09f60ae3314ea2f
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQIcBAEBCAAGBQJQrpBiAAoJEJOE+m71LUu6S1IQAIJDhINYxvbxCJwDwy6A2Jgk
-FZDkxHqZ5Z1+rY1N+5GcDaXHZEScIXX7PRWm05NbDBkjDZB86uuNMSlHADG64XaO
-hRIUWHhQqnPhBkD+aghLadWStyhHP/M3d2WVgZbd3OMNxNCMqzMhwO1VWYao0Zxn
-sRvGmBHA0ZJ71s+pLRuCiFxukX6ihGASV0Ax4O+Ca7KX2YYnGTEN6DE+cTMzLeZl
-yIU2HWg8fiL43+pE/3zVIkW8i6yVpdC2rKnKmf5vXrCZ4mDPTBjocgCVsr+pbgcc
-549u2vi20IEnZXeS5GocjQiamd3XnEOww3ZwWm9eRr1dbXQMPfoY0Yn8ZP1bbFt6
-lcmrUZxwKPnbLLndN56fmfo6wa1CpYc4FFHCrSSmUf6jDpnAvbtU4BGZ3GKGrgNB
-4GiVCtyP3xfKBW7Puby+0Yt3sskDoMvSRSalCpMf92neQLpefUWE6uRr9Yf/GGge
-iLxtA8pInoCozKyJ4crpxpSBgA+CYaRpRUOMSzAPQdOiGxK03O4DdkBLwtkHqi1f
-f6kVVpAeEjt11UBRO0B3+qRtHqV4zGQw02SPOXPV6aQYADav1HzmhG8h3zCOo9au
-8WasW817CC+JIM2LPDjC72whZoifQA3Z1ci6+bEQcPcnXwoOlR4APhNhrpiH8KxV
-5rpZJmybtCuh0krX7QoW
-=FWUV
+iQEcBAEBCAAGBQJQtpjfAAoJEEdUh39IaPFNh1oIAIewwBQDU15zDMlme3e5h3Uy
+SCDvXunXfZVaJp2uIDpLfMvnuryrfJNdts268kj3m6/YurYALdfgpJ0uw+mGu++0
+iKrd8qLYh2X0mJyY1mW4zXhJpeIUx5V06notavFLAekSThlE/oLgVKqSEi7r8/Cy
+juuzHjeIAzu/grbofrUpeJa+vRWlKGWcsKNEje5VE2lX/OJGhDZx9pHXuu837Lis
+XUQM29qFbYOfjOAO2ebvUe6N36l8Rd6saF0mvSTK2bSLgnL20FvIZBtJ+2gP7Mf9
+kh8NCMukLvVtngZTbLPO3d10i+qAVXgOtCVy4QwMoBQ6yzDYNpL3nAgQ7kmbnhQ=
+=k/fn
 -----END PGP SIGNATURE-----
