@@ -1,6 +1,10 @@
 # ChangeLog for sys-auth/consolekit
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-auth/consolekit/ChangeLog,v 1.145 2012/11/22 20:51:52 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-auth/consolekit/ChangeLog,v 1.146 2012/11/28 23:07:02 ssuominen Exp $
+
+  28 Nov 2012; Samuli Suominen <ssuominen@gentoo.org>
+  consolekit-0.4.5_p20120320.ebuild, consolekit-0.4.5_p20120320-r1.ebuild:
+  Use virtual/udev instead of sys-fs/udev wrt #444398
 
   22 Nov 2012; Anthony G. Basile <blueness@gentoo.org> ChangeLog:
   Fix failed gpg signing of manifest
